Fix display issue where a large gap would appear under the name letters if the character picker, and icons, weren't selected

--- a/src/scss/monkey/_letters.scss
+++ b/src/scss/monkey/_letters.scss
@@ -208,9 +208,11 @@
   position: absolute;
   top:0;
 }
-.letter-spans {
-  margin-top: 10px;
-  height: 82px;
+.monkey-icons {
+  .letter-spans {
+    margin-top: 10px;
+    height: 82px;
+  }
 }
 .letter--cloned {
 
